--- a/profile/public/index.html
+++ b/profile/public/index.html
@@ -9,12 +9,14 @@
 </head>
 <body>
     <nav>
+        
         <a href="">Home</a>
         <a href="">Blog</a>
         <a href="https://github.com/YabseraBogale">Github</a>
-        <a><i class="fa fa-download" aria-hidden="true"> Resume</i></a>
+        <a download="pdf" href="./resume.pdf" target="_blank"><i class="fa fa-download" aria-hidden="true"> Resume</i></a>
     </nav>
     <div class="main">
+        <img src="https://avatars.githubusercontent.com/u/96526984?v=4" alt="Yabsera Bogale Image">
         <h1>Yabsera Bogale Software Developer</h1>
     <h3>Personal Info</h3>
     <hr>
