looks everything is right now to test

--- a/esh/public/add_emergency_contact.html
+++ b/esh/public/add_emergency_contact.html
@@ -1,1 +1,13 @@
-
+!<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>esh</title>
+    <link rel="stylesheet" href="/style/add_emergency_contact.css">
+</head>
+<body>
+    <h1>add emergency contact</h1>
+    <script src="/js/add_emergency_contact.js"></script>
+</body>
+</html>
