--- a/esh/public/index.html
+++ b/esh/public/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>esh</title>
+    <link rel="stylesheet" href="/style/index.css">
 </head>
 <body>
-    <h1>esh</h1>
+    <h1>index</h1>
+    <script src="/js/index.js"></script>
 </body>
 </html>
