--- a/esh/public/add_item.html
+++ b/esh/public/add_item.html
@@ -8,6 +8,15 @@
 </head>
 <body>
     <h1>add item</h1>
+    <form action="" method="post">
+        employee id <input type="number" name="employee_id" id=""> 
+        item id <input type="number" name="item_id" id="">
+        item name <input type="text" name="item_name" id="">
+        item description <input type="text" name="item_description" id="">
+        item quantity <input type="number" name="quantity" id="">
+        item status <input type="text" name="item_status" id="">
+        item date <input type="datetime" name="item_date" id="">
+    </form>
     <script src="/js/add_item.js"></script>
 </body>
 </html>
