--- a/esh/public/add_item.html
+++ b/esh/public/add_item.html
@@ -16,6 +16,8 @@
         item quantity <input type="number" name="quantity" id="">
         item status <input type="text" name="item_status" id="">
         item date <input type="datetime" name="item_date" id="">
+        <input type="submit" value="Enter">
+        <input type="reset" value="Cancel">
     </form>
     <script src="/js/add_item.js"></script>
 </body>
