--- a/esh/public/add_item.html
+++ b/esh/public/add_item.html
@@ -9,13 +9,13 @@
 <body>
     <h1>add item</h1>
     <form action="" method="post">
-        employee id <input type="number" name="employee_id" id=""> 
-        item id <input type="number" name="item_id" id="">
-        item name <input type="text" name="item_name" id="">
-        item description <input type="text" name="item_description" id="">
-        item quantity <input type="number" name="quantity" id="">
-        item status <input type="text" name="item_status" id="">
-        item date <input type="datetime" name="item_date" id="">
+        <p>employee id <input type="number" name="employee_id" id=""> </p>
+        <p>item id <input type="number" name="item_id" id=""></p>
+        <p>item name <input type="text" name="item_name" id=""></p>
+        <p>item description <input type="text" name="item_description" id=""></p>
+        <p>item quantity <input type="number" name="quantity" id=""></p>
+        <p>item status <input type="text" name="item_status" id=""></p>
+        <p>item date <input type="datetime" name="item_date" id=""></p>
         <input type="submit" value="Enter">
         <input type="reset" value="Cancel">
     </form>
