looks everything is right now to test

--- a/esh/public/add_item.html
+++ b/esh/public/add_item.html
@@ -9,15 +9,72 @@
 <body>
     <h1>add item</h1>
     <form action="" method="post">
-        <p>employee id <input type="number" name="employee_id" id=""> </p>
-        <p>item id <input type="number" name="item_id" id=""></p>
-        <p>item name <input type="text" name="item_name" id=""></p>
-        <p>item description <input type="text" name="item_description" id=""></p>
-        <p>item quantity <input type="number" name="quantity" id=""></p>
-        <p>item status <input type="text" name="item_status" id=""></p>
-        <p>item date <input type="datetime" name="item_date" id=""></p>
-        <input type="submit" value="Enter">
-        <input type="reset" value="Cancel">
+        <table>
+            <tr>
+                <td>
+                    employee id
+                </td>
+                <td>
+                    <input type="number" name="employee_id" id="">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    item id
+                </td>
+                <td>
+                    <input type="number" name="item_id" id="">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    item name 
+                </td>
+                <td>
+                    <input type="text" name="item_name" id="">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    item description 
+                </td>
+                <td>
+                    <input type="text" name="item_description" id="">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    item quantity 
+                </td>
+                <td>
+                    <input type="number" name="quantity" id="">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    item status 
+                </td>
+                <td>
+                    <input type="text" name="item_status" id="">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    item date 
+                </td>
+                <td>
+                    <input type="datetime" name="item_date" id="">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <input type="submit" value="Enter">
+                </td>
+                <td>
+                    <input type="reset" value="Cancel">
+                </td>
+            </tr>
+        </table>    
     </form>
     <script src="/js/add_item.js"></script>
 </body>
