looks everything is right now to test

--- a/esh/public/add_item.html
+++ b/esh/public/add_item.html
@@ -47,7 +47,7 @@
                     item quantity 
                 </td>
                 <td>
-                    <input type="number" name="quantity" id="">
+                    <input type="number" name="quantity" id="" min="0">
                 </td>
             </tr>
             <tr>
