--- a/esh/public/add_job.html
+++ b/esh/public/add_job.html
@@ -8,6 +8,34 @@
 </head>
 <body>
     <h1>add job</h1>
+    <form action="" method="post">
+        <table>
+            <tr>
+                <td>
+                    job title
+                </td>
+                <td>
+                    <input type="text" name="job_title" id="">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    job description 
+                </td>
+                <td>
+                    <textarea name="job_description " id=""></textarea>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <input type="submit" value="Enter">
+                </td>
+                <td>
+                    <input type="reset" value="Cancel">
+                </td>
+            </tr>
+        </table>
+    </form>
     <script src="/js/add_job.js"></script>
 </body>
 </html>
