looks everything is right now to test

--- a/esh/public/add_employee.html
+++ b/esh/public/add_employee.html
@@ -8,6 +8,135 @@
 </head>
 <body>
     <h1>add employee</h1>
+    <form action="" method="post">
+        <table>
+            <tr>
+                <td>
+                    Firstname 
+                </td>
+                <td>
+                    <input type="text" name="firstname" id="">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Middlename
+                </td>
+                <td>
+                    <input type="text" name="middlename" id="">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Lastname
+                </td>
+                <td>
+                    <input type="text" name="lastname" id="">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Phonenumber
+                </td>
+                <td>
+                    <input type="text" name="" id="">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Fyda Id
+                </td>
+                <td>
+                    <input type="text" name="fyda_id" id="">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Email
+                </td> 
+                <td>
+                    <input type="email" name="email" id="">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Hiring Date
+                </td>
+                <td>
+                    <input type="datetime" name="hire_date" id="">
+                </td>
+            </tr>
+        </table>
+        <h3>Emergency Contact Information</h3>
+        <table>
+            <tr>
+                <td>
+                    Firstname 
+                </td>
+                <td>
+                    <input type="text" name="emergency_firstname" id="">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Middlename
+                </td>
+                <td>
+                    <input type="text" name="emergency_middlename" id="">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Lastname
+                </td>
+                <td>
+                    <input type="text" name="emergency_lastname" id="">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Phonenumber
+                </td>
+                <td>
+                    <input type="text" name="emergency_phonenumber" id="">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Email
+                </td>
+                <td>
+                    <input type="email" name="emergency_email" id="">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Fyda Id
+                </td>
+                <td>
+                    <input type="text" name="emergency_fyda_id" id="">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Job Id 
+                </td>
+                <td>
+                    <input type="number" name="job_id" id="">
+                </td>
+            </tr>
+        </table>
+        <table>
+            <tr>
+                <td>
+                    <input type="submit" value="Enter">
+                </td>
+                <td>
+                    <input type="reset" value="Reset">
+                </td>
+            </tr>
+        </table>
+    </form>
     <script src="/js/add_employee.js"></script>
 </body>
 </html>
