looks everything is right now to test

--- a/esh/public/add_employee.html
+++ b/esh/public/add_employee.html
@@ -119,10 +119,10 @@
             </tr>
             <tr>
                 <td>
-                    Job Id 
+                    Job Title
                 </td>
                 <td>
-                    <input type="number" name="job_id" id="">
+                    <input type="number" name="job_title" id="">
                 </td>
             </tr>
         </table>
