looks everything is right now to test

--- a/esh/public/add_employee.html
+++ b/esh/public/add_employee.html
@@ -63,7 +63,7 @@
                     Hiring Date
                 </td>
                 <td>
-                    <input type="datetime" name="hire_date" id="">
+                    <input type="date" name="hire_date" id="">
                 </td>
             </tr>
         </table>
@@ -122,7 +122,7 @@
                     Job Title
                 </td>
                 <td>
-                    <input type="number" name="job_title" id="">
+                    <input type="text" name="job_title" id="">
                 </td>
             </tr>
         </table>
