--- a/esh/public/add_item.html
+++ b/esh/public/add_item.html
@@ -63,7 +63,7 @@
                     item date 
                 </td>
                 <td>
-                    <input type="datetime" name="item_date" id="">
+                    <input type="date" name="item_date" id="">
                 </td>
             </tr>
             <tr>
