--- a/esh/public/add_job.html
+++ b/esh/public/add_job.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>add job</h1>
-    <form action="" method="post">
+    <form action="add_job" method="post">
         <table>
             <tr>
                 <td>
@@ -23,7 +23,7 @@
                     job description 
                 </td>
                 <td>
-                    <textarea name="job_description " id=""></textarea>
+                    <textarea name="job_description" id=""></textarea>
                 </td>
             </tr>
             <tr>
