--- a/esh/public/add_employee.html
+++ b/esh/public/add_employee.html
@@ -39,7 +39,7 @@
                     Phonenumber
                 </td>
                 <td>
-                    <input type="text" name="" id="">
+                    <input type="text" name="phonenumber" id="">
                 </td>
             </tr>
             <tr>
