--- a/esh/public/add_employee.html
+++ b/esh/public/add_employee.html
@@ -68,6 +68,14 @@
             </tr>
             <tr>
                 <td>
+                    Department 
+                </td>
+                <td>
+                    <input type="text" name="department" id="">
+                </td>
+            </tr>
+            <tr>
+                <td>
                     Hiring Date
                 </td>
                 <td>
