--- a/esh/public/add_job.html
+++ b/esh/public/add_job.html
@@ -20,6 +20,14 @@
             </tr>
             <tr>
                 <td>
+                    Department 
+                </td>
+                <td>
+                    <input type="text" name="department" id="">
+                </td>
+            </tr>
+            <tr>
+                <td>
                     job description 
                 </td>
                 <td>
