--- a/esh/public/add_employee.html
+++ b/esh/public/add_employee.html
@@ -71,7 +71,9 @@
                     Department 
                 </td>
                 <td>
-                    <input type="text" name="department" id="">
+                    <select name="department" id="">
+                        
+                    </select>
                 </td>
             </tr>
             <tr>
