--- a/esh/public/add_job.html
+++ b/esh/public/add_job.html
@@ -44,6 +44,28 @@
             </tr>
         </table>
     </form>
+    <h3>
+        Upload file should be .xlsx extension and format should be in
+    </h3>
+    <table>
+        <tr>
+            <td>
+
+            </td>
+        </tr>
+    </table>
+    <form action="" method="post">
+        <table>
+            <tr>
+                <td>
+                    upload file. 
+                </td>
+                <td>
+                    <input type="file" name="add_job" id="">
+                </td>
+            </tr>
+        </table>
+    </form>
     <script src="/js/add_job.js"></script>
 </body>
 </html>
