--- a/esh/public/add_job.html
+++ b/esh/public/add_job.html
@@ -50,7 +50,24 @@
     <table>
         <tr>
             <td>
-
+                job title 
+            </td>
+            <td>
+                Department 
+            </td>
+            <td>
+                job description 
+            </td>
+        </tr>
+        <tr>
+            <td>
+                title
+            </td>
+            <td>
+                Department 
+            </td>
+            <td>
+                description 
             </td>
         </tr>
     </table>
