now onto css,js and some dirty error handling!

--- a/esh/public/add_employee.html
+++ b/esh/public/add_employee.html
@@ -15,7 +15,7 @@
                     Firstname 
                 </td>
                 <td>
-                    <input type="text" name="firstname" id="">
+                    <input type="text" name="firstname" id="" required>
                 </td>
             </tr>
             <tr>
@@ -23,7 +23,7 @@
                     Middlename
                 </td>
                 <td>
-                    <input type="text" name="middlename" id="">
+                    <input type="text" name="middlename" id="" required>
                 </td>
             </tr>
             <tr>
@@ -31,7 +31,7 @@
                     Lastname
                 </td>
                 <td>
-                    <input type="text" name="lastname" id="">
+                    <input type="text" name="lastname" id="" required>
                 </td>
             </tr>
             <tr>
@@ -39,7 +39,7 @@
                     Phonenumber
                 </td>
                 <td>
-                    <input type="text" name="phonenumber" id="">
+                    <input type="text" name="phonenumber" id="" required>
                 </td>
             </tr>
             <tr>
@@ -47,7 +47,7 @@
                     Fyda Id
                 </td>
                 <td>
-                    <input type="text" name="fyda_id" id="">
+                    <input type="text" name="fyda_id" id="" required>
                 </td>
             </tr>
             <tr>
@@ -55,7 +55,7 @@
                     Email
                 </td> 
                 <td>
-                    <input type="email" name="email" id="">
+                    <input type="email" name="email" id="" required>
                 </td>
             </tr>
             <tr>
@@ -63,7 +63,7 @@
                     Job Title
                 </td>
                 <td>
-                    <input type="text" name="job_title" id="">
+                    <input type="text" name="job_title" id="" required>
                 </td>
             </tr>
             <tr>
@@ -71,7 +71,7 @@
                     Department 
                 </td>
                 <td>
-                    <select name="department" id="">
+                    <select name="department" id="" required>
                         
                     </select>
                 </td>
@@ -81,7 +81,7 @@
                     Hiring Date
                 </td>
                 <td>
-                    <input type="date" name="hire_date" id="">
+                    <input type="date" name="hire_date" id="" required>
                 </td>
             </tr>
         </table>
@@ -92,7 +92,7 @@
                     Firstname 
                 </td>
                 <td>
-                    <input type="text" name="emergency_firstname" id="">
+                    <input type="text" name="emergency_firstname" id="" required>
                 </td>
             </tr>
             <tr>
@@ -100,7 +100,7 @@
                     Middlename
                 </td>
                 <td>
-                    <input type="text" name="emergency_middlename" id="">
+                    <input type="text" name="emergency_middlename" id="" required>
                 </td>
             </tr>
             <tr>
@@ -108,7 +108,7 @@
                     Lastname
                 </td>
                 <td>
-                    <input type="text" name="emergency_lastname" id="">
+                    <input type="text" name="emergency_lastname" id="" required>
                 </td>
             </tr>
             <tr>
@@ -116,7 +116,7 @@
                     Phonenumber
                 </td>
                 <td>
-                    <input type="text" name="emergency_phonenumber" id="">
+                    <input type="text" name="emergency_phonenumber" id="" required>
                 </td>
             </tr>
             <tr>
@@ -124,7 +124,7 @@
                     Email
                 </td>
                 <td>
-                    <input type="email" name="emergency_email" id="">
+                    <input type="email" name="emergency_email" id="" required>
                 </td>
             </tr>
             <tr>
@@ -132,7 +132,7 @@
                     Fyda Id
                 </td>
                 <td>
-                    <input type="text" name="emergency_fyda_id" id="">
+                    <input type="text" name="emergency_fyda_id" id="" required>
                 </td>
             </tr>
         </table>
