--- a/esh/public/add_item.html
+++ b/esh/public/add_item.html
@@ -15,7 +15,7 @@
                     employee id
                 </td>
                 <td>
-                    <input type="number" name="employee_id" id="">
+                    <input type="number" name="employee_id" id="" required>
                 </td>
             </tr>
             <tr>
@@ -23,7 +23,7 @@
                     item id
                 </td>
                 <td>
-                    <input type="number" name="item_id" id="">
+                    <input type="number" name="item_id" id="" required>
                 </td>
             </tr>
             <tr>
@@ -31,7 +31,7 @@
                     item name 
                 </td>
                 <td>
-                    <input type="text" name="item_name" id="">
+                    <input type="text" name="item_name" id="" required>
                 </td>
             </tr>
             <tr>
@@ -39,7 +39,7 @@
                     item description 
                 </td>
                 <td>
-                    <input type="text" name="item_description" id="">
+                    <input type="text" name="item_description" id="" required>
                 </td>
             </tr>
             <tr>
@@ -47,7 +47,7 @@
                     item quantity 
                 </td>
                 <td>
-                    <input type="number" name="quantity" id="" min="0">
+                    <input type="number" name="quantity" id="" min="0" required>
                 </td>
             </tr>
             <tr>
@@ -55,7 +55,7 @@
                     item status 
                 </td>
                 <td>
-                    <input type="text" name="item_status" id="">
+                    <input type="text" name="item_status" id="" required>
                 </td>
             </tr>
             <tr>
@@ -63,7 +63,7 @@
                     item date 
                 </td>
                 <td>
-                    <input type="date" name="item_date" id="">
+                    <input type="date" name="item_date" id="" required>
                 </td>
             </tr>
             <tr>
