--- a/esh/public/add_job.html
+++ b/esh/public/add_job.html
@@ -15,7 +15,7 @@
                     job title
                 </td>
                 <td>
-                    <input type="text" name="job_title" id="">
+                    <input type="text" name="job_title" id="" required>
                 </td>
             </tr>
             <tr>
@@ -23,7 +23,7 @@
                     Department 
                 </td>
                 <td>
-                    <input type="text" name="department" id="">
+                    <input type="text" name="department" id="" required>
                 </td>
             </tr>
             <tr>
@@ -31,7 +31,7 @@
                     job description 
                 </td>
                 <td>
-                    <textarea name="job_description" id=""></textarea>
+                    <textarea name="job_description" id="" required></textarea>
                 </td>
             </tr>
             <tr>
