--- a/esh/public/add_employee.html
+++ b/esh/public/add_employee.html
@@ -39,7 +39,7 @@
                     Phonenumber
                 </td>
                 <td>
-                    <input type="text" name="phonenumber" id="" required>
+                    <input type="text" name="number id="" required>
                 </td>
             </tr>
             <tr>
@@ -71,7 +71,7 @@
                     Department 
                 </td>
                 <td>
-                    <select name="department" id="" required>
+                    <select name="department" id="department" required>
                         
                     </select>
                 </td>
