--- a/esh/public/add_employee.html
+++ b/esh/public/add_employee.html
@@ -39,7 +39,7 @@
                     Phonenumber
                 </td>
                 <td>
-                    <input type="text" name="number id="" required>
+                    <input type="number" name="phonenumber" id="" required>
                 </td>
             </tr>
             <tr>
@@ -116,7 +116,7 @@
                     Phonenumber
                 </td>
                 <td>
-                    <input type="text" name="emergency_phonenumber" id="" required>
+                    <input type="number" name="emergency_phonenumber" id="" required>
                 </td>
             </tr>
             <tr>
