--- a/esh/public/add_employee.html
+++ b/esh/public/add_employee.html
@@ -63,7 +63,9 @@
                     Job Title
                 </td>
                 <td>
-                    <input type="text" name="job_title" id="" required>
+                    <select name="job_title" id="" required>
+
+                    </select>
                 </td>
             </tr>
             <tr>
