--- a/esh/public/add_employee.html
+++ b/esh/public/add_employee.html
@@ -63,7 +63,7 @@
                     Job Title
                 </td>
                 <td>
-                    <select name="job_title" id="" required>
+                    <select name="job_title" id="job_title" required>
 
                     </select>
                 </td>
