changed item from input text to textarea

--- a/esh/public/add_item.html
+++ b/esh/public/add_item.html
@@ -48,7 +48,7 @@
                     item status 
                 </td>
                 <td>
-                    <input type="text" name="item_status" id="" required>
+                    <textarea name="item_status" id="" required></textarea>
                 </td>
             </tr>
             <tr>
