changed item from input text to textarea

--- a/esh/public/purchase_request.html
+++ b/esh/public/purchase_request.html
@@ -44,7 +44,7 @@
             </tr>
             <tr>
                 <td>
-                    item status 
+                    resason for purchase request
                 </td>
                 <td>
                     <textarea name="item_status" id="" required></textarea>
@@ -52,7 +52,7 @@
             </tr>
             <tr>
                 <td>
-                    item date 
+                    purchase request date 
                 </td>
                 <td>
                     <input type="date" name="item_date" id="" required>
