--- a/esh/public/purchase_request.html
+++ b/esh/public/purchase_request.html
@@ -39,7 +39,7 @@
                     item quantity 
                 </td>
                 <td>
-                    <input type="number" name="quantity" id="" min="0" required>
+                    <input type="number" name="quantity" id="" min="0" inputmode="numeric" required>
                 </td>
             </tr>
             <tr>
