--- a/esh/public/purchase_request.html
+++ b/esh/public/purchase_request.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/purchase_request.css">
+    <link rel="stylesheet" href="/style/purchase_request.css">
     <title>Document</title>
 </head>
 <body>
+    
     <form action="/purchase_request" method="post">
         <table>
             <tr>
@@ -68,6 +69,6 @@
             </tr>
         </table>    
     </form>
-    <script src="js/purchase_request.js"></script>
+    <script src="/js/purchase_request.js"></script>
 </body>
 </html>
