--- a/esh/public/add_employee.html
+++ b/esh/public/add_employee.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>add employee</h1>
-    <form action="" method="post">
+    <form action="/add_employee" method="post">
         <table>
             <tr>
                 <td>
