forgot about salary

--- a/esh/public/add_employee.html
+++ b/esh/public/add_employee.html
@@ -86,6 +86,14 @@
                     <input type="date" name="hire_date" id="" required>
                 </td>
             </tr>
+            <tr>
+                <td>
+                    salary
+                </td>
+                <td>
+                    <input type="number" name="salary" id="" required>
+                </td>
+            </tr>
         </table>
         <h3>Emergency Contact Information</h3>
         <table>
