--- a/esh/public/index.html
+++ b/esh/public/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="/style/index.css">
 </head>
 <body>
-    <h1>index</h1>
-    <script src="/js/index.js"></script>
+    <h1>esh plateform</h1>
+	    
+<script src="/js/index.js"></script>
 </body>
 </html>
