updated the databaseclear

--- a/esh/public/add_employee.html
+++ b/esh/public/add_employee.html
@@ -94,6 +94,14 @@
                     <input type="number" name="salary" id="" required>
                 </td>
             </tr>
+            <tr>
+                <td>
+                    year experince
+                </td>
+                <td>
+                    <input type="number" name="year_experince" id="" required>
+                </td>
+            </tr>
         </table>
         <h3>Emergency Contact Information</h3>
         <table>
