updated the databaseclear

--- a/esh/public/add_employee.html
+++ b/esh/public/add_employee.html
@@ -96,7 +96,7 @@
             </tr>
             <tr>
                 <td>
-                    year experince
+                    year of experince
                 </td>
                 <td>
                     <input type="number" name="year_experince" id="" required>
