woeking on index API

--- a/esh/public/index.html
+++ b/esh/public/index.html
@@ -7,7 +7,15 @@
     <link rel="stylesheet" href="/style/index.css">
 </head>
 <body>
-    <h1>esh plateform</h1>
+    <div class="main">
+        <h1>esh plateform</h1>
+        <h2>
+            Esh: Enterprise-Grade Inventory Management and HR Solutions for Large-Scale Operations.
+        </h2>
+        <p>
+            Managing extensive inventory across multiple locations and a large workforce demands robust and integrated solutions. Esh provides the power and scalability you need to maintain complete control. Our platform seamlessly combines advanced inventory tracking – from item receipt to employee assignment – with a comprehensive HR system designed to streamline your growing team's administration. Gain unparalleled visibility into your assets and empower your human resources with Esh.
+        </p>
+    </div>
 	    
 <script src="/js/index.js"></script>
 </body>
