woeking on index API

--- a/esh/public/index.html
+++ b/esh/public/index.html
@@ -10,10 +10,10 @@
     <div class="main">
         <h1>esh plateform</h1>
         <h2>
-            Esh: Enterprise-Grade Inventory Management and HR Solutions for Large-Scale Operations.
+            Esh: Total Control Over Your Large Inventory and Extensive Workforce.
         </h2>
         <p>
-            Managing extensive inventory across multiple locations and a large workforce demands robust and integrated solutions. Esh provides the power and scalability you need to maintain complete control. Our platform seamlessly combines advanced inventory tracking – from item receipt to employee assignment – with a comprehensive HR system designed to streamline your growing team's administration. Gain unparalleled visibility into your assets and empower your human resources with Esh.
+            If you manage a substantial inventory and a significant number of employees, you need a solution built for scale. Esh provides the tools to meticulously track your inventory, assign item responsibility across your team, and efficiently handle all aspects of your human resources. From detailed inventory audits to streamlined employee management, Esh delivers the control and visibility you need to operate at peak efficiency, no matter the size of your operation.    
         </p>
     </div>
 	    
