woeking on index API

--- a/esh/public/index.html
+++ b/esh/public/index.html
@@ -16,6 +16,17 @@
             If you manage a substantial inventory and a significant number of employees, you need a solution built for scale. Esh provides the tools to meticulously track your inventory, assign item responsibility across your team, and efficiently handle all aspects of your human resources. From detailed inventory audits to streamlined employee management, Esh delivers the control and visibility you need to operate at peak efficiency, no matter the size of your operation.    
         </p>
     </div>
+    <div class="help">
+        <ul>
+            <li>Scalability: The platform can handle a large number of items and transactions.</li>
+            <li>Control and Visibility: Maintaining oversight across a complex inventory.</li>
+            <li>Accountability: Tracking item responsibility across a large team.</li>
+            <li>Integration: Combining inventory and HR for a holistic view.</li>
+            <li>Efficiency: Streamlining processes to save time and resources.</li>
+            <li>Loss Prevention: Reducing shrinkage and improving asset management.</li>
+            <li>Data-Driven Insights: Enabling informed decision-making based on comprehensive data.</li>
+        </ul>
+    </div>
 	    
 <script src="/js/index.js"></script>
 </body>
