--- a/esh/public/index.html
+++ b/esh/public/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>esh</title>
     <link rel="stylesheet" href="/style/index.css">
 </head>
+
 <body>
     <div class="main">
         <h1>esh plateform</h1>
@@ -13,10 +15,14 @@
             Esh: Total Control Over Your Large Inventory and Extensive Workforce.
         </h2>
         <p>
-            If you manage a substantial inventory and a significant number of employees, you need a solution built for scale. Esh provides the tools to meticulously track your inventory, assign item responsibility across your team, and efficiently handle all aspects of your human resources. From detailed inventory audits to streamlined employee management, Esh delivers the control and visibility you need to operate at peak efficiency, no matter the size of your operation.    
+            If you manage a substantial inventory and a significant number of employees, you need a solution built for
+            scale. Esh provides the tools to meticulously track your inventory, assign item responsibility across your
+            team, and efficiently handle all aspects of your human resources. From detailed inventory audits to
+            streamlined employee management, Esh delivers the control and visibility you need to operate at peak
+            efficiency, no matter the size of your operation.
         </p>
     </div>
-    <div class="help">
+    <div class="helps_with">
         <ul>
             <li>Scalability: The platform can handle a large number of items and transactions.</li>
             <li>Control and Visibility: Maintaining oversight across a complex inventory.</li>
@@ -27,7 +33,13 @@
             <li>Data-Driven Insights: Enabling informed decision-making based on comprehensive data.</li>
         </ul>
     </div>
-	    
-<script src="/js/index.js"></script>
+    <div class="contact">
+        <p>email: yabserapython@gmail.com</p>
+        <p>phonenumber: +251920201161
+        </p>
+    </div>
+
+    <script src="/js/index.js"></script>
 </body>
+
 </html>
