woeking on index API

--- a/esh/public/index.html
+++ b/esh/public/index.html
@@ -35,8 +35,7 @@
     </div>
     <div class="contact">
         <p>email: yabserapython@gmail.com</p>
-        <p>phonenumber: +251920201161
-        </p>
+        <p>phonenumber: +251920201161</p>
     </div>
 
     <script src="/js/index.js"></script>
