added department and office

--- a/esh/public/add_employee.html
+++ b/esh/public/add_employee.html
@@ -80,6 +80,16 @@
             </tr>
             <tr>
                 <td>
+                    office
+                </td>
+                <td>
+                    <select name="office" id="office" required>
+                        
+                    </select>
+                </td>
+            </tr>
+            <tr>
+                <td>
                     Hiring Date
                 </td>
                 <td>
