added department and office

--- a/esh/public/add_job.html
+++ b/esh/public/add_job.html
@@ -28,6 +28,14 @@
             </tr>
             <tr>
                 <td>
+                    office
+                </td>
+                <td>
+                    <input type="text" name="office" id="">
+                </td>
+            </tr>
+            <tr>
+                <td>
                     job description 
                 </td>
                 <td>
